--- a/project/index.html
+++ b/project/index.html
@@ -31,6 +31,9 @@
         $('#introduce').css('visibility','visible');
         })
      });
+        $(window).click(function () {
+          $('#menu-phone').slideUp();
+        })
         
       $('.container-item1').hover(function(){
         $('.text-l').typed({
